--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.16",
+    "cross-env": "^7.0.3",
     "typescript": "^4.1.2"
   },
   "scripts": {
