--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.16",
     "cross-env": "^7.0.3",
+    "cypress": "^8.7",
     "typescript": "^4.1.2"
   },
   "scripts": {
