--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/react-hooks": "^8.0.1",
