--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/styled-components": "^5.1.16",
     "cross-env": "^7.0.3",
     "cypress": "^8.7",
+    "start-server-and-test": "^1.14.0",
     "typescript": "^4.1.2"
   },
   "scripts": {
