--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "test:ci": "cross-env CI=true react-scripts test",
     "eject": "react-scripts eject"
   },
