--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@cypress/instrument-cra": "^1.4.0",
     "@testing-library/cypress": "^8.0.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -31,11 +32,14 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
+    "test:e2e": "start-test dev 3000 cy:open",
+    "test:e2e:ci": "start-test start 3000 cy:run",
     "test:ci": "cross-env CI=true react-scripts test",
     "eject": "react-scripts eject"
   },
