chore: ignore cypress folder to eslint

--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    "ignorePatterns": [
+      "cypress/**/*"
+    ],
     "extends": [
       "react-app",
       "react-app/jest"
