--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "noEmit": true,
     "types": ["cypress", "@testing-library/cypress"],
     "esModuleInterop": true
   },
